--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
+    "react-scrollable-feed": "^2.0.1",
     "react-toastify": "^10.0.4",
     "web-vitals": "^2.1.4"
   },
