--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=5000
 
 MONGO_URI=mongodb+srv://kareena001:Kareena%4016*@cluster0.qe68cmk.mongodb.net/?retryWrites=true&w=majorit
-JWT_SECRET = harsh
+JWT_SECRET = kareena
