--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-notification-badge": "^1.5.1",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
